chore: dependencies update

--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -20,6 +20,11 @@ dev = [
     "ruff>=0.9.10",
     "taskipy>=1.14.1",
 ]
+docs = [
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.7",
+    "mkdocstrings[python]>=0.29.0",
+]
 
 [tool.ruff]
 line-length = 120
