build: adds github actions with build and tests

--- a/github/workflows/fastqueue_tests.yml
+++ b/github/workflows/fastqueue_tests.yml
@@ -1,4 +1,4 @@
-name: FastQueue Build
+name: FastQueue Tests
 
 on: 
   push:
@@ -19,9 +19,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.12'  
+          python-version: '3.12' 
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ze/requirements.txt
+          pip install -r src/requirements_test.txt
+
+      - name: Run tests
+        run: |
+          pytest src/tests/
