--- a/src/requirements_test.txt
+++ b/src/requirements_test.txt
@@ -1,6 +1,6 @@
-    httpx>=0.28.1
-    pytest>=8.3.5
-    pytest-cov>=6.0.0
-    requests==2.32.3
-    celery==5.4.0
+fastapi==0.115.11
+pytest>=8.3.5
+pytest-cov>=6.0.0
+requests==2.32.3
+celery==5.4.0
     
